// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetaInfoDetails should render lastUpdate as JSX Element 1`] = `
<div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-wrap-s-flexStart-center-row"
    data-test-subj="MetaInfoDetailsmetaInfoDetails"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiText emotion-EuiText"
      >
        created_by
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
      data-test-subj="MetaInfoDetailslastUpdate"
    >
      <span
        class="euiBadge emotion-EuiInnerText"
        title="Last update value"
      >
        <span
          class="euiBadge__content emotion-euiBadge__content"
        >
          <span
            class="euiBadge__text emotion-euiBadge__text"
          >
            <p>
              Last update value
            </p>
          </span>
        </span>
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiText emotion-EuiText"
      >
        by
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
      data-test-subj="MetaInfoDetailslastUpdateValue"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-center-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="euiBadge emotion-EuiInnerText"
            title="value"
          >
            <span
              class="euiBadge__content emotion-euiBadge__content"
            >
              <span
                class="euiBadge__text emotion-euiBadge__text"
              >
                value
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MetaInfoDetails should render lastUpdate as string 1`] = `
<div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-wrap-s-flexStart-center-row"
    data-test-subj="MetaInfoDetailsmetaInfoDetails"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiText emotion-EuiText"
      >
        created_by
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
      data-test-subj="MetaInfoDetailslastUpdate"
    >
      <span
        class="euiBadge emotion-EuiInnerText"
        title="last update"
      >
        <span
          class="euiBadge__content emotion-euiBadge__content"
        >
          <span
            class="euiBadge__text emotion-euiBadge__text"
          >
            last update
          </span>
        </span>
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiText emotion-EuiText"
      >
        by
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
      data-test-subj="MetaInfoDetailslastUpdateValue"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-center-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="euiBadge emotion-EuiInnerText"
            title="value"
          >
            <span
              class="euiBadge__content emotion-euiBadge__content"
            >
              <span
                class="euiBadge__text emotion-euiBadge__text"
              >
                value
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
